2007-10-18  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-private.h:
        * libnautilus-private/nautilus-directory.[ch]:
        * src/nautilus-application.c:
	Make nautilus_directory_get_existing take GFile *.
	Add nautilus_directory_get taking a GFile *

2007-10-18  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-desktop-directory-file.c:
        * libnautilus-private/nautilus-desktop-directory.c:
        * libnautilus-private/nautilus-desktop-icon-file.c:
        * libnautilus-private/nautilus-desktop-link-monitor.c:
        * libnautilus-private/nautilus-directory.c:
        * libnautilus-private/nautilus-directory.h:
        * libnautilus-private/nautilus-file-operations.c:
        * libnautilus-private/nautilus-file-utilities.c:
        * src/file-manager/fm-directory-view.c:
        * src/nautilus-navigation-window.c:
        * src/nautilus-window-manage-views.c:
        * test/test-nautilus-directory-async.c:
	Rename nautilus_directory_get to nautilus_directory_get_by_uri.

2007-10-18  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-desktop-link.c:
        * libnautilus-private/nautilus-desktop-icon-file.c:
	Handle NULL volume
	
        * libnautilus-private/nautilus-file.c:
        * libnautilus-private/nautilus-icon-dnd.c:
	Convert gnome_vfs calls to gio

2007-10-18  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-desktop-icon-file.c:
        * src/nautilus-application.c:
        * src/nautilus-window-menus.c:
        * test/test-nautilus-directory-async.c:
        * test/test.c:
	Convert gnome_vfs calls to gio

2007-10-18  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-application.[ch]:
	Convert gnome_vfs calls to gio

	* TODO-gio:
	Document some stuff that needs doing in gio-branch

2007-10-18  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-search-engine-simple.c: